# policy-navigator

./: .gitignore  DEPLOYMENT.md  OPENAI_QUOTA_FIX.md  P3AI_SETUP.md  QUICKSTART.md  README.md  TESTING.md  package-lock.json  start-backend.ps1
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  render.yaml  requirements.txt  test_api_key.py
backend/app/: main.py  schemas.py
backend/app/agents/: __init__.py  advocacy_agent.py  base_agent.py  benefit_matching_agent.py  chatbot_agent.py  citizen_agent.py  credential_issuer_agent.py  document_processor_agent.py  eligibility_agent.py  policy_impact_predictor.py  policy_interpreter_agent.py  translation_agent.py
backend/app/infra/: p3ai_client.py  p3ai_client_old.py  policy_fetcher.py
backend/app/routers/: __init__.py  chat.py  citizens.py  documents.py  eligibility.py  impact.py  policies.py  policy_interpretation.py  simple_eligibility.py  translation.py
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/app/: layout.tsx  page.tsx
frontend/app/benefits/: page.tsx
frontend/app/citizen/: page.tsx
frontend/app/policies/: page.tsx
frontend/components/: BenefitCard.tsx  PolicyCard.tsx  SystemStatus.tsx
policy-navigator-1/: README.md  docker-compose.yml
policy-navigator-1/backend/: .env.example
policy-navigator-1/frontend/: next.config.js  package.json
policy-navigator-mobile/: README.md  pubspec.yaml
policy-navigator-mobile/lib/: main.dart
policy-navigator-mobile/test/: widget_test.dart
policy-navigator-mobile/web/: index.html  manifest.json
(+50 files in other folders)
