[tool]
name = "policy-navigator"
version = "0.1.0"
description = "A multi-agent AI system for government policy interpretation, eligibility verification, and benefit matching."
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.0"
uvicorn = "^0.22.0"
pydantic = "^1.10.0"
p3ai-agent = "0.1.0"
langchain-openai = "^0.0.1"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
black = "^22.0"
isort = "^5.0"

[tool.poetry.scripts]
start = "uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload"